fix: Add missing keywords to package.json for better project identification

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "keywords": [
+    "munner ram inter college saraikhwaja jaunpur ",
+    "mirc",
+    "ramm school"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
