fix: Correct spelling of Munner to Munnar in multiple components and update top image in AboutPage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "keywords": [
-    "munner ram inter college saraikhwaja jaunpur ",
+    "munnar ram inter college saraikhwaja jaunpur ",
     "mirc",
     "ramm school"
   ],
